verical text component

--- a/main/assets/css/components/_vertical_text.scss
+++ b/main/assets/css/components/_vertical_text.scss
@@ -1,7 +1,8 @@
 .vertical-content {
 
   @include breakpoint(sm) {
-
+    position: absolute;
+    left: calc(-1 * 7vw);
    display: grid;
     justify-items: center;
     grid-template-rows: min-content auto;
