code the contact details section and map

--- a/main/assets/css/base/_typography.scss
+++ b/main/assets/css/base/_typography.scss
@@ -10,7 +10,7 @@
   body {
     font-size: var(--text-base-size, 1em);
     font-family: var(--font-primary, sans-serif);
-    color: var(--color-contrast-high, hsl(240, 4%, 20%));
+    color: var(--color-primary-light, hsl(240, 4%, 40%));
   }
 
   h1, h2, h3, h4 {
