--- a/main/assets/css/custom-style/_buttons.scss
+++ b/main/assets/css/custom-style/_buttons.scss
@@ -29,7 +29,6 @@
   --btn-bg: var(--color-primary);
   --btn-fg: var(--color-white);
 
-
   &:after {
     filter: invert(100%);
   }
@@ -70,6 +69,9 @@
 .btn--primary {
   @extend %arrow-icon;
 
+  &--link {
+    padding: 0;
+  }
   &:hover {
     text-decoration: underline;
   }
