--- a/main/assets/css/pages/_contact.scss
+++ b/main/assets/css/pages/_contact.scss
@@ -8,7 +8,32 @@
       background-color: var(--color-white);
       width: 343px;
       position: absolute;
-      bottom: 1px;
+      bottom: 0.5px;
     }
+  }
+
+  &__details {
+    margin-top: 72px;
+    &__content {
+      display: flex;
+      flex-wrap: wrap;
+    }
+    .contact-card {
+      &__header {
+        font-weight: 700;
+      }
+      &__body {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+         p {
+          line-height: 2;
+        }
+      }
+    }
+  }
+
+  &__map {
+    margin-top: 72px;
   }
 }
