--- a/main/assets/css/pages/_contact.scss
+++ b/main/assets/css/pages/_contact.scss
@@ -26,6 +26,9 @@
         display: flex;
         align-items: center;
         flex-wrap: wrap;
+        .info {
+          padding: var(--space-md) 0;
+        };
          p {
           line-height: 2;
         }
