--- a/main/assets/css/custom-style/_util.scss
+++ b/main/assets/css/custom-style/_util.scss
@@ -32,3 +32,23 @@
     --component-padding: var(--container-component-padding);
   }
 }
+
+.flow--sm > * + *{
+    margin-top: var(--space-sm);
+}
+
+.flow--md > * + *{
+    margin-top: var(--space-md);
+}
+
+.flow--lg> * + *{
+    margin-top: var(--space-lg);
+}
+
+.flow--xl > * + *{
+    margin-top: var(--space-xl);
+}
+
+.flow--xxl > * + *{
+    margin-top: var(--space-xxl);
+}
