--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -7082,6 +7082,21 @@ mark {
   .container-width\@md {
     --component-padding: var(--container-component-padding); } }
 
+.flow--sm > * + * {
+  margin-top: var(--space-sm); }
+
+.flow--md > * + * {
+  margin-top: var(--space-md); }
+
+.flow--lg > * + * {
+  margin-top: var(--space-lg); }
+
+.flow--xl > * + * {
+  margin-top: var(--space-xl); }
+
+.flow--xxl > * + * {
+  margin-top: var(--space-xxl); }
+
 .slide {
   padding: 6.875rem 0;
   position: relative;
@@ -7319,6 +7334,29 @@ mark {
 
 .contact__map {
   margin-top: 72px; }
+
+.contact .connect {
+  margin-top: 72px; }
+  .contact .connect__form {
+    display: grid; }
+    .contact .connect__form input,
+    .contact .connect__form textarea {
+      border: none;
+      width: 100%;
+      border-bottom: 1px solid var(--color-primary);
+      padding: 0 0 var(--space-md) var(--space-md);
+      resize: none; }
+    .contact .connect__form ::-moz-placeholder {
+      color: var(--color-black-light);
+      font-weight: 700; }
+    .contact .connect__form :-ms-input-placeholder {
+      color: var(--color-black-light);
+      font-weight: 700; }
+    .contact .connect__form ::placeholder {
+      color: var(--color-black-light);
+      font-weight: 700; }
+    .contact .connect__form .form-action {
+      margin-left: auto; }
 
 /* -------------------------------- 
 
