header section complete

--- a/main/assets/css/pages/_contact.scss
+++ b/main/assets/css/pages/_contact.scss
@@ -10,6 +10,24 @@
       position: absolute;
       bottom: 0.5px;
     }
+
+    @include breakpoint(sm) {
+      .container {
+        background: url('../images/contact/tablet/image-hero.jpg') no-repeat;
+        background-size: cover;
+        padding: 18rem 0 0 3.625rem;
+        position: relative;
+      }
+      .header__content {
+        padding: 5.5rem 0 0 3.6875rem;
+        background: var(--color-white);
+      }
+      h1 {
+          position: absolute;
+          right: 0;
+          top: 14.6875rem;
+         }
+    }
   }
 
   &__details {
