--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -7334,17 +7334,25 @@ mark {
   display: flex;
   flex-wrap: wrap; }
 
-.contact__details .contact-card__header {
-  font-weight: 700; }
+.contact__details .contact-card {
+  flex-grow: 1; }
+  .contact__details .contact-card__header {
+    font-weight: 700; }
+  .contact__details .contact-card__body {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap; }
+    .contact__details .contact-card__body .info {
+      padding: var(--space-md) 0; }
+    .contact__details .contact-card__body p {
+      line-height: 2; }
 
-.contact__details .contact-card__body {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap; }
-  .contact__details .contact-card__body .info {
-    padding: var(--space-md) 0; }
-  .contact__details .contact-card__body p {
-    line-height: 2; }
+@media (min-width: 48rem) {
+  .contact__details h2 {
+    flex-grow: 1;
+    max-width: 20ch; }
+  .contact__details .contact-card__body {
+    justify-content: space-between; } }
 
 .contact .connect__form {
   display: grid; }
