add image srcset to display responsive images

--- a/main/assets/css/custom-style/_util.scss
+++ b/main/assets/css/custom-style/_util.scss
@@ -15,6 +15,10 @@
 
 //container utilities
 
+.container--full-width {
+  --component-padding: 0;
+}
+
 .container-width\@md {
   @include breakpoint(md) {
     --component-padding: var(--container-component-padding);
