complete tablet and desktop for details care

--- a/main/assets/css/pages/_contact.scss
+++ b/main/assets/css/pages/_contact.scss
@@ -30,14 +30,14 @@
     }
   }
 
-  &__details {
+  .details {
+
     &__content {
       display: flex;
       flex-wrap: wrap;
-
     }
 
-    .contact-card {
+    .details-card {
       flex-grow: 1;
       &__header {
         font-weight: 700;
@@ -60,10 +60,23 @@
         max-width: 20ch;
       }
 
-      .contact-card {
+      .details-card {
         &__body {
           justify-content: space-between;
         }
+      }
+    }
+
+    @include breakpoint(md) {
+      &__content {
+        flex-wrap: nowrap;
+        justify-content: space-between;
+      }
+      h2 {
+        max-width: 8ch;
+      }
+      .details-card {
+       min-width: 360px;
       }
     }
   }
