--- a/main/assets/css/pages/_contact.scss
+++ b/main/assets/css/pages/_contact.scss
@@ -112,9 +112,10 @@
       display: grid;
       input,
       textarea {
+        --border-color: var(--color-primary);
         border: none;
         width: 100%;
-        border-bottom: 1px solid var(--color-primary);
+        border-bottom: 1px solid var(--border-color);
         padding: 0 0 var(--space-md) var(--space-md);
         resize: none;
         font-weight: 700;
@@ -122,7 +123,7 @@
       input:focus,
       textarea:focus {
         outline: none;
-        border-bottom: 2px solid var(--color-primary);
+        border-bottom: 2px solid var(--border-color);
         margin-bottom: -1px;
       }
 
@@ -130,6 +131,27 @@
         color: var(--color-black-light);
         font-weight: 700;
       }
+
+      .form__input {
+        position: relative;
+        p {
+          position: absolute;
+          bottom: 5px;
+          right: 0;
+          color: var(--color-error);
+        }
+        &.error {
+          ::placeholder {
+            color: var(--color-error);
+          }
+          input,
+          textarea {
+            --border-color: var(--color-error);
+          }
+        }
+      }
+
+
       .form-action {
         margin-left: auto;
       }
