--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -7385,16 +7385,17 @@ mark {
   display: grid; }
   .contact .connect__form input,
   .contact .connect__form textarea {
+    --border-color: var(--color-primary);
     border: none;
     width: 100%;
-    border-bottom: 1px solid var(--color-primary);
+    border-bottom: 1px solid var(--border-color);
     padding: 0 0 var(--space-md) var(--space-md);
     resize: none;
     font-weight: 700; }
   .contact .connect__form input:focus,
   .contact .connect__form textarea:focus {
     outline: none;
-    border-bottom: 2px solid var(--color-primary);
+    border-bottom: 2px solid var(--border-color);
     margin-bottom: -1px; }
   .contact .connect__form ::-moz-placeholder {
     color: var(--color-black-light);
@@ -7405,6 +7406,22 @@ mark {
   .contact .connect__form ::placeholder {
     color: var(--color-black-light);
     font-weight: 700; }
+  .contact .connect__form .form__input {
+    position: relative; }
+    .contact .connect__form .form__input p {
+      position: absolute;
+      bottom: 5px;
+      right: 0;
+      color: var(--color-error); }
+    .contact .connect__form .form__input.error ::-moz-placeholder {
+      color: var(--color-error); }
+    .contact .connect__form .form__input.error :-ms-input-placeholder {
+      color: var(--color-error); }
+    .contact .connect__form .form__input.error ::placeholder {
+      color: var(--color-error); }
+    .contact .connect__form .form__input.error input,
+    .contact .connect__form .form__input.error textarea {
+      --border-color: var(--color-error); }
   .contact .connect__form .form-action {
     margin-left: auto; }
 
