--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -20,7 +20,9 @@
     display: grid; //use grid so the spacing for slide content with more text matches the design
     justify-items: start;
     color: var(--color-white);
-
+    p {
+      max-width: 28rem;
+    }
     > a {
       align-self: end;
     }
