--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -1,7 +1,6 @@
 
 //HEADER SLIDES
 .slide {
-  padding: 6.875rem 0;
   position: relative;
   background: linear-gradient(alpha(var(--color-black), 0.4),alpha(var(--color-black), 0.4));
 
@@ -15,46 +14,51 @@
     object-fit: cover;
   }
 
+  color: var(--color-white);
+
   &__content {
-    height: 21.25rem;
-    display: grid; //use grid so the spacing for slide content with more text matches the design
-    justify-items: start;
-    color: var(--color-white);
-    p {
-      max-width: 28rem;
+
+    h1 {
+      color: inherit;
+
     }
     > a {
-      align-self: end;
+    margin-top: var(--space-md);
     }
   }
 }
 
-@include breakpoint(sm) {
+  @include breakpoint(sm) {
+
+
+  }
+
+
+  @include breakpoint(md) {
 
   .slide {
-    padding: 11.25rem 0;
+    padding: 180px 470px 180px 190px;
+  }
 
-    .slide__content {
-      height: 22.5625rem; //keep height the same for tablet and desktop
+  #slide4 {
+    h1 {
+      letter-spacing: -6px;
     }
   }
-}
 
-
-@include breakpoint(md) {
 
   .slide-nav {
     position: absolute;
-     border-bottom: 1px solid var(--color-black-lighter);
+    border-bottom: 1px solid var(--color-black-lighter);
     bottom: 0px;
     left: calc(-1 * var(--btn-num-icon-width));
     display: flex;
 
-     button:not(:last-child) {
-       border-right: 1px solid var(--color-black-lighter);
+    button:not(:last-child) {
+      border-right: 1px solid var(--color-black-lighter);
     }
   }
-}
+  }
 
 
 // WELCOME SECTION
@@ -137,6 +141,7 @@
 // FEATURED SECTION
 
 .featured {
+
   &__main {
   --col-gap: 1.5rem;
   display: grid;
