--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -7097,9 +7097,9 @@ mark {
   margin-top: var(--space-xxl); }
 
 .slide {
-  padding: 6.875rem 0;
   position: relative;
-  background: linear-gradient(hsla(var(--color-black-h), var(--color-black-s), var(--color-black-l), 0.4), hsla(var(--color-black-h), var(--color-black-s), var(--color-black-l), 0.4)); }
+  background: linear-gradient(hsla(var(--color-black-h), var(--color-black-s), var(--color-black-l), 0.4), hsla(var(--color-black-h), var(--color-black-s), var(--color-black-l), 0.4));
+  color: var(--color-white); }
   .slide img {
     position: absolute;
     left: 0;
@@ -7109,23 +7109,16 @@ mark {
     height: 100%;
     -o-object-fit: cover;
        object-fit: cover; }
-  .slide__content {
-    height: 21.25rem;
-    display: grid;
-    justify-items: start;
-    color: var(--color-white); }
-    .slide__content p {
-      max-width: 28rem; }
-    .slide__content > a {
-      align-self: end; }
-
-@media (min-width: 48rem) {
-  .slide {
-    padding: 11.25rem 0; }
-    .slide .slide__content {
-      height: 22.5625rem; } }
+  .slide__content h1 {
+    color: inherit; }
+  .slide__content > a {
+    margin-top: var(--space-md); }
 
 @media (min-width: 64rem) {
+  .slide {
+    padding: 180px 470px 180px 190px; }
+  #slide4 h1 {
+    letter-spacing: -6px; }
   .slide-nav {
     position: absolute;
     border-bottom: 1px solid var(--color-black-lighter);
