fix colour of h1

--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -20,6 +20,9 @@
     display: grid; //use grid so the spacing for slide content with more text matches the design
     justify-items: start;
     color: var(--color-white);
+    h1 {
+      color: inherit;
+    }
     p {
       max-width: 28rem;
     }
