--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -36,8 +36,8 @@
 
   @include breakpoint(md) {
 
-  .slide {
-    padding: 180px 470px 180px 190px;
+  .slide__content {
+    margin: 180px 470px 180px 190px;
   }
 
   #slide4 {
