use max-width to control slide content

--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -37,7 +37,8 @@
   @include breakpoint(md) {
 
   .slide__content {
-    margin: 180px 470px 180px 190px;
+    margin: 180px 0 180px 190px;
+    max-width: 466px;
   }
 
   #slide4 {
