use padding on paragraph to space elements

--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -22,8 +22,7 @@
       color: inherit;
     }
     p {
-      margin-top: var(--space-xs) 0 var(--space-xxxl);
-      margin-bottom:
+      margin: var(--space-xs) 0 var(--space-xxxl);
     }
   }
 }
