--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -4,6 +4,7 @@
   position: relative;
   background: linear-gradient(alpha(var(--color-black), 0.4),alpha(var(--color-black), 0.4));
   color: var(--color-white);
+  padding: 110px var(--container-component-padding);
 
   img {
     position: absolute;
@@ -16,23 +17,25 @@
   }
 
   &__content {
-    padding: 110px var(--container-component-padding);
+    height: 340px;
+    display: grid;
 
     h1 {
       color: inherit;
     }
-    p {
-      margin: var(--space-xs) 0 var(--space-xxxl);
-    }
+
+    a {
+     align-self: end;
+     justify-self: start;
+   }
   }
 }
 
 @include breakpoint(sm) {
-  .slide__content {
+  .slide {
     padding: 180px 55px;
-
-    p {
-      margin-bottom: var(--space-xxxl);
+    &__content {
+      height: 360px;
     }
   }
 }
@@ -40,18 +43,12 @@
 @include breakpoint(md) {
   .slide {
     padding: 180px 0 180px 190px;
+    &__content {
+      p {
+        max-width: 445px;
+      }
+    }
   }
-  .slide__content {
-  padding: 0;
-  max-height: 360px;
-  max-width: 690px;
-
-   p {
-     max-width: 466px;
-     margin-bottom: var(--space-lg);
-   }
-  }
-
   .slide-nav {
     position: absolute;
     border-bottom: 1px solid var(--color-black-lighter);
