--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -6815,6 +6815,7 @@ html:not(.js) .no-js\:is-hidden {
       --space-xxxxl: calc(7.59 * var(--space-unit)); } } }
 
 :root {
+  --paragraph-width: 446px;
   --container-component-padding: var(--space-xxl); }
   @media (min-width: 48rem) {
     :root {
@@ -7126,7 +7127,7 @@ mark {
   .slide {
     padding: 180px 0 180px 190px; }
     .slide__content p {
-      max-width: 445px; }
+      max-width: var(--paragraph-width); }
   .slide-nav {
     position: absolute;
     border-bottom: 1px solid var(--color-black-lighter);
@@ -7145,18 +7146,27 @@ mark {
   color: var(--color-primary-light); }
 
 @media (min-width: 48rem) {
+  .welcome__main {
+    padding-top: 50px; }
   .welcome h1 {
     position: absolute;
-    top: -5.375rem; }
+    top: -5.5rem;
+    left: 0; }
   .welcome .text-component h2 {
     --text-vspace-multiplier: 4; } }
 
 @media (min-width: 64rem) {
   .welcome__main {
     background: url(../images/home/desktop/image-welcome.jpg) no-repeat;
-    background-position: right center; }
-  .welcome .text-component h2 {
-    --text-vspace-multiplier: 2.4; } }
+    background-position: right center;
+    background-size: auto 100%;
+    padding: 105px 0 0 189px; }
+  .welcome .text-component {
+    --text-vspace-multiplier: 1.2; }
+    .welcome .text-component p {
+      max-width: var(--paragraph-width); }
+    .welcome .text-component h2 {
+      --text-vspace-multiplier: 2.4; } }
 
 .teams__main {
   --bg-image: url(../images/home/mobile/image-small-team.jpg);
@@ -7169,6 +7179,8 @@ mark {
   padding-bottom: var(--padding-y); }
   .teams__main .text-component {
     --text-vspace-multiplier: 3; }
+    .teams__main .text-component h2 {
+      color: inherit; }
 
 @media (min-width: 48rem) {
   .teams__main {
