--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -45,7 +45,7 @@
     padding: 180px 0 180px 190px;
     &__content {
       p {
-        max-width: 445px;
+        max-width: var(--paragraph-width);
       }
     }
   }
@@ -80,9 +80,14 @@
 
   @include breakpoint(sm) {
 
+    &__main {
+      padding-top: 50px;
+    }
+
     h1 {
       position: absolute;
-      top: -5.375rem;
+      top: -5.5rem;
+      left: 0;
     }
 
     .text-component {
@@ -96,9 +101,15 @@
     &__main{
       background: url(../images/home/desktop/image-welcome.jpg) no-repeat;
       background-position: right center;
+      background-size: auto 100%;
+      padding: 105px 0 0 189px;
     }
 
     .text-component {
+      --text-vspace-multiplier: 1.2;
+      p {
+        max-width: var(--paragraph-width);
+      }
       h2 {
         --text-vspace-multiplier: 2.4;
       }
@@ -123,6 +134,9 @@
 
     .text-component {
       --text-vspace-multiplier: 3;
+      h2 {
+        color: inherit;
+      }
     }
   }
 
