--- a/main/assets/css/style.css
+++ b/main/assets/css/style.css
@@ -7221,6 +7221,8 @@ mark {
 .portfolio .project-cards {
   display: grid;
   gap: 24px; }
+  .portfolio .project-cards .project-card h3 {
+    color: inherit; }
   @media (min-width: 64rem) {
     .portfolio .project-cards {
       grid-template-columns: repeat(3, 1fr);
